gl33-master/src/test/deca/context/invalid/other/convFloatIntFct.deca
// Test de contexte invalide : appel faux de la fonction (float au lieu de int)

class MyClass{

    int puissance(int a){
        return a*a;
    }
}

{
    MyClass m = new MyClass();
    int x = m.puissance(3.75e-4f);
}
